force-app/main/default/objects/Tax_Deduction__mdt/Tax_Deduction__mdt.object-meta.xml
<CustomObject>
    <description>Tax Deductions used for Pricing Calculator in 2021 (change as needed)</description>
    <label>Tax Deduction</label>
    <pluralLabel>Tax Deductions</pluralLabel>
</CustomObject>