force-app/main/default/objects/Tax_Deduction__mdt/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <label>Head of Household</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>