force-app/main/default/objects/Tax_Deduction__mdt/fields/Married_Filing_Jointly__c.field-meta.xml
<CustomField>
    <fullName>Married_Filing_Jointly__c</fullName>
    <label>Married Filing Jointly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>