force-app/main/default/objects/Tax_Deduction__mdt/fields/Married_Filing_Separate__c.field-meta.xml
<CustomField>
    <fullName>Married_Filing_Separate__c</fullName>
    <label>Married Filing Separate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>