force-app/main/default/objects/Tax_Deduction__mdt/fields/Single__c.field-meta.xml
<CustomField>
    <fullName>Single__c</fullName>
    <label>Single</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>